--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:theme="@style/Theme.CodingWithCoffee"
         tools:targetApi="31">
         <activity
-            android:name=".DtPickerActivity"
-            android:exported="true" >
+            android:name=".TableActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,14 +24,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".DtPickerActivity"
+            android:exported="true"/>
+        <activity
             android:name=".BtmSheetActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"/>
         <activity
             android:name=".VideoPlayerActivity"
             android:exported="true"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
